# result

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/Geode/: Result.hpp
test/: CMakeLists.txt  Misc.cpp  MoveOnly.cpp  Normal.cpp  Ref.cpp  Void.cpp  test.cpp
